[package]
name = "file-upload-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"]}
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
hyper = { version = "0.14.32", features = ["full"] }
sanitize-filename = "0.5"
http = "1.2.0"